adding addcard html

--- a/html/results.html
+++ b/html/results.html
@@ -14,6 +14,14 @@
     </style>
 </head>
 <body>
+  <header>
+    <nav>
+        <a href=“card.html”>Get flashed</a>
+        <a href=“addcard.html”>Create New Deck</a>
+        <a href=“results.html”>See Results</a>
+        <a href=“index.html”>Add/Change user</a>
+    </nav>
+</header>
   <H1>Card page for the form</H1>
   <p></p>
   <H2></H2>
