--- a/html/card.html
+++ b/html/card.html
@@ -6,12 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Card page</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="cardstylesheet" href="cardstyle.css">
   
     <style>
      
     </style>
 </head>
 <body>
+  <header>
+    <nav>
+        <a href="card.html">Get flashed</a>
+        <a href="addcard.html">Create New Deck</a>
+        <a href="results.html">See Results</a>
+        <a href="index.html">Add/Change user</a>
+    </nav>
+</header>
   <H1>Card page for the form</H1>
   <p></p>
   <H2></H2>
