--- a/html/card.html
+++ b/html/card.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/cardstyle.css">
   <title>Card page</title>
   <link rel="stylesheet" href="style.css">
   <link rel="cardstylesheet" href="cardstyle.css">
@@ -16,10 +17,10 @@
 <body>
   <header>
     <nav>
-        <a href="card.html">Get flashed</a>
-        <a href="addcard.html">Create New Deck</a>
-        <a href="results.html">See Results</a>
-        <a href="index.html">Add/Change user</a>
+      <a href="./html/card.html">Get flashed</a>
+      <a href="./html/addcard.html">Create New Deck</a>
+      <a href="./html/results.html">See Results</a>
+      <a href="./html/index.html">Add/Change user</a>
     </nav>
 </header>
   <H1>Card page for the form</H1>
