fixed links, added some HTML elements

--- a/html/index.html
+++ b/html/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="./html/card.html">Get flashed</a>
-            <a href="./html/addcard.html">Create New Deck</a>
-            <a href="./html/results.html">See Results</a>
-            <a href="./html/index.html">Add/Change user</a>
+            <a href="/html/card.html">Get flashed</a>
+            <a href="/html/addcard.html">Create New Deck</a>
+            <a href="/html/results.html">See Results</a>
+            <a href="/html/index.html">Add/Change user</a>
         </nav>
     </header>
 <div>
