--- a/html/addcard.html
+++ b/html/addcard.html
@@ -6,17 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Front Page</title>
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 </head>
 
 
 <body>
   <header>
     <nav>
-      <a href="./html/card.html">Get flashed</a>
-      <a href="./html/addcard.html">Create New Deck</a>
-      <a href="./html/results.html">See Results</a>
-      <a href="./html/index.html">Add/Change user</a>
+      <a href="/html/card.html">Get flashed</a>
+      <a href="/html/addcard.html">Create New Deck</a>
+      <a href="/html/results.html">See Results</a>
+      <a href="/html/index.html">Add/Change user</a>
     </nav>
 </header>
   <h1>Add Card page</h1>
