adding chart data to results pages

--- a/html/results.html
+++ b/html/results.html
@@ -32,6 +32,7 @@
     <canvas id="myChart"></canvas>
   </section>
   
-  <script src="app.js"></script>
+  <script src="../js/app.js"></script>
+  <script src="../js/results.js"></script>
 </body>
 </html>
