--- a/html/card.html
+++ b/html/card.html
@@ -33,6 +33,8 @@
   </section>
   <button type="button"  name="next-button" id="next-button">Next Card</button>
   
+<div id="card-counter" class="fixed">you are on card X of XX</div> </div>
+
   <script src="/js/app.js"></script>
   <script src="/js/card.js"></script>
 </body>
