--- a/html/results.html
+++ b/html/results.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
-  <title>Card page</title>
+  <title>Results</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js"
     integrity="sha512-sW/w8s4RWTdFFSduOTGtk4isV1+190E/GghVffMA9XczdJ2MDzSzLEubKAs5h0wzgSJOQTRYyaz73L3d6RtJSg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -25,13 +25,9 @@
       <a href="/html/index.html">Add/Change user</a>
     </nav>
 </header>
-  <H1>Card page for the form</H1>
-  <p></p>
-  <H2></H2>
-  <section>
-    <canvas id="myChart"></canvas>
-  </section>
-  
+<body>  
+  <H1>Results</H1>
+  <canvas id="myChart"></canvas>
   <script src="../js/app.js"></script>
   <script src="../js/results.js"></script>
 </body>
