styled lots of things

--- a/html/addcard.html
+++ b/html/addcard.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Front Page</title>
+  <title>flash.me</title>
   <link rel="stylesheet" href="/css/style.css" />
 </head>
 
@@ -13,10 +13,10 @@
 <body>
   <header>
     <nav>
-      <a href="/html/card.html">Get flashed</a>
-      <a href="/html/addcard.html">Create New Deck</a>
+      <a href="/html/index.html">Select User </a>
+      <a href="/html/card.html">Flash Yourself</a>
+      <a href="/html/addcard.html">Create New Cards</a>
       <a href="/html/results.html">See Results</a>
-      <a href="/html/index.html">Add/Change user</a>
     </nav>
 </header>
   <h1>Add Card page</h1>
@@ -48,10 +48,7 @@
     
     
     <footer>
-      <div id='info'>
-        <p><strong class='strong'>HQ Location:</strong> 555 DoNotCallUs Ave., Anywhere, USA 00000  </p>
-        <p><strong class='strong'>Hours of Operation: </strong> 9:00 AM to 6:00 PM</p>
-      </div>
+      <p>&copy; 2022 "Team Lightning" - Josh Frazer, Trevor Stephens, Matthew Gebhart, Ari Palmer</p>
     </footer>
   <script src="./app.js"></script>
 </body>
