--- a/html/card.html
+++ b/html/card.html
@@ -6,23 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/cardstyle.css">
-  <title>Card page</title>
+  <title>flash.me</title>
 </head>
 <body>
   <header>
     <nav>
-      <a href="/html/card.html">Get flashed</a>
-      <a href="/html/addcard.html">Create New Deck</a>
+      <a href="/html/index.html">Select User </a>
+      <a href="/html/card.html">Flash Yourself</a>
+      <a href="/html/addcard.html">Create New Cards</a>
       <a href="/html/results.html">See Results</a>
-      <a href="/html/index.html">Add/Change user</a>
     </nav>
 </header>
-  
- <h1>Card page</h1>
+  <br><br>
 
  <section id="card-space">
       <div id="card-front">Sample Card Question that is really long and overflows two lines</div>
-      <!-- <div id="card-back" class="hidden">Sample Answer</div> -->
   </section>
       
   <section id="answers-area">
@@ -35,6 +33,9 @@
   
 <div id="card-counter" class="fixed">you are on card X of XX</div> </div>
 
+<footer>
+  <p>&copy; 2022 "Team Lightning" - Josh Frazer, Trevor Stephens, Matthew Gebhart, Ari Palmer</p>
+</footer>
   <script src="/js/app.js"></script>
   <script src="/js/card.js"></script>
 </body>
