--- a/html/index.html
+++ b/html/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>flash.me</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="/html/card.html">Get flashed</a>
-            <a href="/html/addcard.html">Create New Deck</a>
+            <a href="/html/index.html">Select User </a>
+            <a href="/html/card.html">Flash Yourself</a>
+            <a href="/html/addcard.html">Create New Cards</a>
             <a href="/html/results.html">See Results</a>
-            <a href="/html/index.html">Add/Change user</a>
         </nav>
     </header>
     <div>
@@ -33,6 +33,9 @@
     <section id="chooseDeck">
         
     </section>
+    <footer>
+        <p>&copy; 2022 "Team Lightning" - Josh Frazer, Trevor Stephens, Matthew Gebhart, Ari Palmer</p>
+      </footer>
 <script src="../js/app.js"></script>
 <script src="../js/homepage.js"></script>
 </body>
