playing with grid, didnt go so well

--- a/html/addcard.html
+++ b/html/addcard.html
@@ -23,7 +23,7 @@
   <h1>Add Card page</h1>
   
   <form id='addCard'>
-    <fieldset>
+    <fieldset class="grid-container">
       <legend>Add New Card</legend>
       
       <section id="chooseForm"></section>
@@ -38,7 +38,7 @@
         <input type="text" id="category" name="category" required>
       </div>
       
-      <button type="submit">Add A Card to the Current Deck</button>
+      <button class="btn" type="submit">Add A Card to the Current Deck</button>
     </fieldset>
   
 
