--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <h1>Stack A Flash Lighting Fast</h1>
         <nav>
             <a href="/html/index.html">Select User </a>
             <a href="/html/card.html">Flash Yourself</a>
