fixed file name for forms

--- a/html/index.html
+++ b/html/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flash.me</title>
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/addcard.css">
+    <link rel="stylesheet" href="/css/forms.css">
 </head>
 <body>
     <header>
-        <h1>Stack A Flash Lighting Fast</h1>
+        <!-- <h1>Stack A Flash Lighting Fast</h1> -->
         <nav>
             <a href="/html/index.html">Select User </a>
             <a href="/html/card.html">Flash Yourself</a>
