--- a/html/addcard.html
+++ b/html/addcard.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>flash.me</title>
   <link rel="stylesheet" href="/css/style.css" />
-  <link rel ="stylesheet" href="/css/addcard.css"/>
+  <link rel ="stylesheet" href="/css/forms.css"/>
 </head>
 
 
@@ -16,7 +16,7 @@
     <nav>
       <a href="/html/index.html">Select User </a>
       <a href="/html/card.html">Flash Yourself</a>
-      <a href="/html/addcard.html">Create New Cards</a>
+      <a href="/html/addCard.html">Create New Cards</a>
       <a href="/html/results.html">See Results</a>
     </nav>
 </header>
