css changes to footer, next button, and card text align

--- a/html/card.html
+++ b/html/card.html
@@ -21,6 +21,7 @@
 
  <section id="card-space">
       <div id="card-front">Sample Card Question that is really long and overflows two lines</div>
+      <!-- <div id="card-stack1"></div> -->
   </section>
       
   <section id="answers-area">
