--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,15 @@
             <a href="/html/results.html">See Results</a>
         </nav>
     </header>
+    <div id="instructions">
+        <h1>Get Started</h1>
+        <ul>
+            <li>To get started, first login using your name. If you've been here before, don't worry we remember you.</li>
+            <li>Once you're logged on, head on over to <a href="/html/addcard.html">Create new Card</a> to create a new flash card. If you've been here before, and don't need to add any new cards to any decks, choose a deck from below and head over to Flash Yourself.</li>
+            <li>In Flash Yourself is where your study session begins. Take your time and consider your choices, select your answer, and move on to the next card. Once you've finished a session, follow the prompt to view your results.</li>
+            <li>In results is where you can view your cummulative results </li>
+        </ul>
+    </div>
     <div>
         <form id="user-name-form">
             <fieldset>
