changed links around, some styling

--- a/html/addcard.html
+++ b/html/addcard.html
@@ -14,14 +14,14 @@
 <body>
   <header>
     <nav>
-      <a href="/html/index.html">Select User </a>
+      <a href="../index.html">Select User </a>
       <a href="/html/card.html">Flash Yourself</a>
       <a href="/html/addCard.html">Create New Cards</a>
       <a href="/html/results.html">See Results</a>
     </nav>
 </header>
   <h1>Add Card page</h1>
-  
+  <h2 id="login-info"></h2>
   <form id='addCard'>
     <fieldset class="grid-container">
       <legend>Add New Card</legend>
