--- a/html/results.html
+++ b/html/results.html
@@ -20,7 +20,7 @@
 <body>
   <header>
     <nav>
-      <a href="/html/index.html">Select User </a>
+      <a href="../index.html">Select User </a>
       <a href="/html/card.html">Flash Yourself</a>
       <a href="/html/addcard.html">Create New Cards</a>
       <a href="/html/results.html">See Results</a>
