--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <!-- <h1>Stack A Flash Lighting Fast</h1> -->
         <nav>
-            <a href="/html/index.html">Select User </a>
+            <a href="index.html">Select User </a>
             <a href="/html/card.html">Flash Yourself</a>
             <a href="/html/addcard.html">Create New Cards</a>
             <a href="/html/results.html">See Results</a>
