--- a/html/card.html
+++ b/html/card.html
@@ -19,9 +19,17 @@
 </header>
   <br><br>
 
- <section id="card-space">
+ <!-- <section id="card-space">
       <div id="card-front">Sample Card Question that is really long and overflows two lines</div>
-      <!-- <div id="card-stack1"></div> -->
+  </section> -->
+
+  <!-- ///testing card stack animation///   -->
+  <section class="card-wrapper">
+    <div class="card card-top-right">
+      <div class="card-inner">
+        <div class="card-body" id="card-write">Sample Question here</div>
+      </div>
+    </div>
   </section>
       
   <section id="answers-area">
