changed link formats for github hosting

--- a/html/addcard.html
+++ b/html/addcard.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>flash.me</title>
-  <link rel="stylesheet" href="/css/style.css" />
-  <link rel ="stylesheet" href="/css/forms.css"/>
+  <link rel="stylesheet" href="../css/style.css" />
+  <link rel ="stylesheet" href="../css/forms.css"/>
 </head>
 
 
@@ -15,9 +15,9 @@
   <header>
     <nav>
       <a href="../index.html">Select User </a>
-      <a href="/html/card.html">Flash Yourself</a>
-      <a href="/html/addCard.html">Create New Cards</a>
-      <a href="/html/results.html">See Results</a>
+      <a href="./card.html">Flash Yourself</a>
+      <a href="./addcard.html">Create New Cards</a>
+      <a href="./results.html">See Results</a>
     </nav>
 </header>
   <h1>Add Card page</h1>
