--- a/html/card.html
+++ b/html/card.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/cardstyle.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/cardstyle.css">
   <title>flash.me</title>
 </head>
 <body>
   <header>
     <nav>
       <a href="../index.html">Select User </a>
-      <a href="/html/card.html">Flash Yourself</a>
-      <a href="/html/addcard.html">Create New Cards</a>
-      <a href="/html/results.html">See Results</a>
+      <a href="./card.html">Flash Yourself</a>
+      <a href="./addcard.html">Create New Cards</a>
+      <a href="./results.html">See Results</a>
     </nav>
 </header>
   <br><br>
@@ -45,7 +45,7 @@
 <footer>
   <p>&copy; 2022 "Team Lightning" - Josh Frazer, Trevor Stephens, Matthew Gebhart, Ari Palmer</p>
 </footer>
-  <script src="/js/app.js"></script>
-  <script src="/js/card.js"></script>
+  <script src="../js/app.js"></script>
+  <script src="../js/card.js"></script>
 </body>
 </html>
