--- a/html/results.html
+++ b/html/results.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <title>flash.me</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js"
     integrity="sha512-sW/w8s4RWTdFFSduOTGtk4isV1+190E/GghVffMA9XczdJ2MDzSzLEubKAs5h0wzgSJOQTRYyaz73L3d6RtJSg=="
@@ -21,9 +21,9 @@
   <header>
     <nav>
       <a href="../index.html">Select User </a>
-      <a href="/html/card.html">Flash Yourself</a>
-      <a href="/html/addcard.html">Create New Cards</a>
-      <a href="/html/results.html">See Results</a>
+      <a href="./card.html">Flash Yourself</a>
+      <a href="./addcard.html">Create New Cards</a>
+      <a href="./results.html">See Results</a>
     </nav>
 </header>
 <body>  
