--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flash.me</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/forms.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/forms.css">
 </head>
 <body>
     <header>
         <!-- <h1>Stack A Flash Lighting Fast</h1> -->
         <nav>
             <a href="index.html">Select User </a>
-            <a href="/html/card.html">Flash Yourself</a>
-            <a href="/html/addcard.html">Create New Cards</a>
-            <a href="/html/results.html">See Results</a>
+            <a href="./html/card.html">Flash Yourself</a>
+            <a href="./html/addcard.html">Create New Cards</a>
+            <a href="./html/results.html">See Results</a>
         </nav>
     </header>
     <div>
@@ -38,7 +38,7 @@
     <footer>
         <p>&copy; 2022 "Team Lightning" - Josh Frazer, Trevor Stephens, Matthew Gebhart, Ari Palmer</p>
       </footer>
-<script src="../js/app.js"></script>
-<script src="../js/homepage.js"></script>
+<script src="./js/app.js"></script>
+<script src="./js/homepage.js"></script>
 </body>
 </html>
