final styling tweaks

--- a/html/addcard.html
+++ b/html/addcard.html
@@ -38,7 +38,7 @@
         <input type="text" id="category" name="category" required>
       </div>
       
-      <button class="btn" type="submit">Add A Card to the Current Deck</button>
+      <button class="btn" type="submit">Add Card to the Current Deck</button>
     </fieldset>
   
 
