--- a/html/results.html
+++ b/html/results.html
@@ -9,12 +9,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js"
     integrity="sha512-sW/w8s4RWTdFFSduOTGtk4isV1+190E/GghVffMA9XczdJ2MDzSzLEubKAs5h0wzgSJOQTRYyaz73L3d6RtJSg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <style>
-      canvas {
-        max-width: auto;
-        
-      }
-    </style>
+
+    
 
 </head>
 <body>
@@ -27,7 +23,7 @@
     </nav>
 </header>
 <body>  
-  <H1>Your Results</H1>
+  <H1 id="results-header">Your Results</H1>
   <canvas id="myChart"></canvas>
 
   <footer>
